2009-12-03  Jeffrey Stedfast  <fejj@novell.com>

	* ResourceDictionary.cs (Count): Turns out that the generics Count
	property is always supposed to throw the NotImplementedException.

2009-12-03  Jeffrey Stedfast  <fejj@novell.com>

	* UIElement.cs (RemoveHandler): Implemented.

	* ResourceDictionary.cs: Implemented the remaining bits (Keys,
	Values, CopyTo, etc)

2009-12-02  Jeffrey Stedfast  <fejj@novell.com>

	* ResourceDictionary.cs (IsFixedSize): Implemented.
	(IDictionary.Add): Implemented.
	(IDictionary.CopyTo): Stubbed out.
	(IDictionary.GetEnumerator): Implemented.
	(IDictionary.Remove): Implemented.
	(ICollection.IsSynchronized): Implemented.
	(ICollection.SyncRoot): Implemented.
	(IEnumerable.GetEnumerator): Implemented.

	* PresentationFrameworkCollection.cs: Updated for
	NativeMethods.collection_iterator API changes.

2009-11-30  Jackson Harper  <jackson@ximian.com>

	* DependencyProperty.g.cs: Regenerated.
	
2009-11-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* RoutedEventArgs.cs: Free: make sure we don't free the native wrapper
	more than once.

2009-11-25  Jackson Harper  <jackson@ximian.com>

	* Application.cs: Implement IsRunningOutOfBrowser property.

2009-11-25  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.g.cs: regen.

2009-11-20  Sebastien Pouliot  <sebastien@ximian.com> 

	* PresentationFrameworkCollection.cs: Seal both inner types (found
	using Gendarme's AvoidUnsealedUninheritedInternalTypeRule). Avoid
	code duplication between Dispose and finalizer. Also avoid 
	running the finalizer if disposed (found using Gendarme's 
	UseSuppressFinalizeOnIDisposableTypeWithFinalizerRule). Make non-
	generic enumerator implement IDisposable (suggested by Gendarme's
	TypesWithNativeFieldsShouldBeDisposableRule and proven with unit
	tests).
	* Style.cs: Reduce visibility of ConvertSetterValue

2009-11-20  Sebastien Pouliot  <sebastien@ximian.com>

	* Events.g.cs: Regenerated

2009-11-19  Mario Carrion  <mcarrion@novell.com>
